# C1_Coursework

./: tutorial.ipynb
Old code/: dual.py  dual_np.py
dual_autodiff/: dual.py  pyproject.toml
dual_autodiff/docs/source/: api.rst  conf.py  index.rst  tutorial.rst
dual_autodiff/dual_autodiff/: __init__.py  dual.py
dual_autodiff/dual_autodiff.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
dual_autodiff/dual_autodiff/dual_autodiff.egg-info/: SOURCES.txt
dual_autodiff/tests/: test_dual.py  tests_dual.py
dual_autodiff_x/: pyproject.toml  setup.py
dual_autodiff_x/src/dual_autodiff_x/: dual.c  dual.pyx
dual_autodiff_x/src/dual_autodiff_x.egg-info/: SOURCES.txt
dual_autodiff_x/wheel_contents/dual_autodiff_x/: __init__.py  dual.c
dual_autodiff_x/wheel_contents/dual_autodiff_x-0.1.0.dist-info/: METADATA  RECORD
dual_autodiff_x/wheelhouse/: dual_autodiff_x-0.1.0-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  dual_autodiff_x-0.1.0-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl
