[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dual_autodiff"
version = "0.1.0"
description = "Automatic differentiation using dual numbers"
authors = [
    {name = "Iman Faisal", email = "igf23@cam.ac.uk"}
]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "sympy",
    
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]
docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"